--- a/imobiliario/templates/imoveis/base.html
+++ b/imobiliario/templates/imoveis/base.html
@@ -17,11 +17,11 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="">Item 1</a>
+					<a class="nav-link" href="{% url 'index' %}">Início</a>
 				</li>
 
 				<li class="nav-item">
-					<a class="nav-link" href="">Item 2</a>
+					<a class="nav-link" href="{% url 'bairro_disponiveis' %}">Bairros</a>
 				</li>
 
 				<li class="nav-item">
