--- a/imobiliario/templates/imoveis/bairro.html
+++ b/imobiliario/templates/imoveis/bairro.html
@@ -12,7 +12,7 @@
         {% for imovel in list_apartamentos %}
             <div class="row justify-content-md-center" style="margin-bottom: 50px;">
               <div class="col-lg-3 col-sm-12">
-                <a class="text-center display-4 text-body" href=""> {{ imovel.aluguel| linebreaks}}</a>
+                <a class="text-center display-4 text-body" href="{% url 'apartamento_id' apartamento_id=imovel.pk %}"> {{ imovel.aluguel| linebreaks}}</a>
               </div>
               <div class="col-lg-9 col-sm-12">
                 <p class="lead">{{ imovel.descricao }}</p>
@@ -29,7 +29,7 @@
         {% for imovel in list_casas %}
             <div class="row justify-content-md-center" style="margin-bottom: 50px;">
               <div class="col-lg-3 col-sm-12">
-                <a class="text-center display-4 text-body" href=""> {{ imovel.aluguel| linebreaks}}</a>
+                <a class="text-center display-4 text-body" href="{% url 'casa_id' casa_id=imovel.pk %}"> {{ imovel.aluguel| linebreaks}}</a>
 
               </div>
               <div class="col-lg-9 col-sm-12">
