--- a/imobiliario/templates/imoveis/base.html
+++ b/imobiliario/templates/imoveis/base.html
@@ -24,26 +24,13 @@
 					<a class="nav-link" href="{% url 'bairro_disponiveis' %}">Bairros</a>
 				</li>
 
-				<li class="nav-item">
-					<a class="nav-link" href="">Item 3</a>
-				</li>
-
-
-				<li class="nav-item">
-					<a class="nav-link" href="">Item 4</a>
-				</li>
-
-				<li class="nav-item">
-					<a class="nav-link" href="">Item 5</a>
-				</li>
-
 			</ul>
 			<ul class="my-2 my-lg-2 navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="">Item 6</a>
+					<a class="nav-link" href="{% url 'admin:index' %}">Cadastro</a>
 				</li>
 			</ul>
-    </div>
+   		 </div>
 </nav>
 
     {% block content %}
