--- a/imobiliario/templates/imoveis/base.html
+++ b/imobiliario/templates/imoveis/base.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" a href="{% static 'css/custom.css' %}"/>
     <link rel="stylesheet" a href="{% static 'css/bootstrap.css' %}"/>
     <title>My Site</title>
+	<script>
+	  function BuscaBairro(){
+		window.location = "http://127.0.0.1:8000/busca/bairro/"+ document.getElementById("search").value;
+			}
+	</script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top position-relative">
@@ -26,8 +31,25 @@
 
 			</ul>
 			<ul class="my-2 my-lg-2 navbar-nav">
+
+
+			</ul>
+
+			<ul class="my-2 my-lg-2 navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'admin:index' %}">Cadastro</a>
+				</li>
+				<li class="nav-item">
+					<form>
+						<div class="form-group">
+								<input class="form-control" id="search" type="text" placeholder="Digite o bairro que deseja procurar" />
+						</div>
+					</form>
+				</li>
+				<li class="nav-item">
+					<button class='btn btn-primary' type="button" id="button-busca" onclick="BuscaBairro()">
+						Buscar
+					</button>
 				</li>
 			</ul>
    		 </div>
