Adicionando footer e modificando front template base - Validacao URL bairro por Regex

--- a/imobiliario/templates/imoveis/bairro.html
+++ b/imobiliario/templates/imoveis/bairro.html
@@ -24,6 +24,9 @@
         {% endfor %}
         {% else %}
             <h4>Nenhum apartamento encontrado para este bairro</h4>
+            <br>
+                <hr class="m-lg-3">
+            <br>
     {% endif %}
 
     {% if list_casas %}
