--- a/imobiliario/templates/imoveis/base.html
+++ b/imobiliario/templates/imoveis/base.html
@@ -13,52 +13,69 @@
 	</script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top position-relative">
+<div class="">
+	<nav class="navbar navbar-expand-lg bg-transparent fixed-top position-relative">
 
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'index' %}">Início</a>
-				</li>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link text-dark" href="{% url 'index' %}">Início</a>
+					</li>
 
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'bairro_disponiveis' %}">Bairros</a>
-				</li>
+					<li class="nav-item">
+						<a class="nav-link text-dark" href="{% url 'bairro_disponiveis' %}">Bairros</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link text-dark" href="{% url 'admin:index' %}">Cadastro</a>
+					</li>
+				</ul>
 
-			</ul>
-			<ul class="my-2 my-lg-2 navbar-nav">
+				<ul class="my-2 my-lg-2 navbar-nav">
 
+					<li class="nav-item text-dark">
+						<form>
+							<div class="form-group">
+									<input class="form-control" id="search" type="text" placeholder="Digite o bairro que deseja procurar" />
+							</div>
+						</form>
+					</li>
+					<li class="nav-item">
+						<button class='btn btn-outline-primary' type="button" id="button-busca" onclick="BuscaBairro()">
+							Buscar
+						</button>
+					</li>
+				</ul>
+			 </div>
+	</nav>
+</div>
 
-			</ul>
-
-			<ul class="my-2 my-lg-2 navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'admin:index' %}">Cadastro</a>
-				</li>
-				<li class="nav-item">
-					<form>
-						<div class="form-group">
-								<input class="form-control" id="search" type="text" placeholder="Digite o bairro que deseja procurar" />
-						</div>
-					</form>
-				</li>
-				<li class="nav-item">
-					<button class='btn btn-primary' type="button" id="button-busca" onclick="BuscaBairro()">
-						Buscar
-					</button>
-				</li>
-			</ul>
-   		 </div>
-</nav>
-
-    {% block content %}
+	<div class="jumbotron">
+		{% block content %}
 
 
-    {% endblock %}
+		{% endblock %}
+	</div>
 
 </body>
+	<footer class="container py-5">
+      <div class="row">
+        <div class="col-4 col-md text-center">
+          <img src="{% static 'images/CoracaoDeComputeiro.png' %}" width="60" alt="Computer Hope">
+          <small class="d-block mb-3 text-muted">ENG. COMP. © 2019.2</small>
+        </div>
+
+
+        <div class="col-4 col-md text-center">
+          <h5>Sobre</h5>
+          <ul class="list-unstyled text-small">
+            <li><a class="text-muted" target="_blank" href="https://github.com/Arthuresm/ExercicioPraticoLabEngSoft">Repositório</a></li>
+            <li><a class="text-muted" target="_blank" href="https://www.djangoproject.com/">Documentação Django</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 </html>
